--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "gulp-plumber": "^1.2.1",
     "gulp-rename": "^2.0.0",
     "gulp-replace": "^1.1.3",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-ttf2woff2": "^4.0.1",
     "gulp-uglify": "^3.0.2",
@@ -71,6 +72,7 @@
     "webp-converter": "2.2.3"
   },
   "dependencies": {
+    "@lottiefiles/lottie-interactivity": "^1.6.2",
     "clip-path": "^1.2.0",
     "gulp": "^4.0.2",
     "pristinejs": "^1.1.0",
