feat: history (slider) and about-company (description)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "kumpan",
+  "name": "fort-dialog",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node version v16.14.0\r 1) Автоматическая генерация шрифтов из .otf и .ttf\r 2) Автоматическая генерация _fonts.scss файла с подключением шрифтов,\r    а также миксинами для использования этих шрифтов.\r    При уже существующем файле _fonts.scss новый файл генерироваться не будет\r 3) Автоматическая генерация .webp изображений из форматов {.jpg, .jpeg, .png, .gif}.\r    Также предусмотрено их автоматическое подключение.\r    (Оборачивайте значение атрибута src в теге img в двойные кавычки, т.к плагин gulp-webp-html-nosvg распознает только их)\r 4) Скрипты поддерживают ES6-module imports\r 5) Существует отдельная папка utilsScripts, в которой находятся все скрипты-помощники.\r    К примеру, по умолчанию там лежит скрипт checkSupportedWebp, который говорит, поддерживает браузер формат .webp изображений или нет.\r    Если да, то к тегу body добавляется класс \"webp\", а если нет, то \"no-webp\".\r    Благодаря этим классам css понимает, подключать .webp формат изображений или более традиционный\r 6) Реализован функционал автоматического деплоя на удаленный сервер.\r    Для этого следует создать .env файл в корневой папке проекта.\r    Примером должен послужить файл .env.template, в котором описано, чем являются переменные окружения",
   "main": "gulpfile.js",
   "scripts": {
     "dev": "cross-env NODE_ENV=development gulp",
