--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@lottiefiles/lottie-interactivity": "^1.6.2",
     "clip-path": "^1.2.0",
     "gulp": "^4.0.2",
+    "imask": "^7.6.1",
     "pristinejs": "^1.1.0",
     "rollup": "^2.79.1",
     "swiper": "^8.4.7",
